--- a/style/header.css
+++ b/style/header.css
@@ -1,19 +1,32 @@
 header {
   background-image: url(../assets/Background_Intro.png);
+  background-size: cover;
   padding: 80px;
-  display: grid;
+  /* display: grid; */
   gap: 56px;
+  height: 100vh;
 }
 
 .perfil {
-  display: grid;
-  width: 87.27px;
-  height: 87.27px;
+  display: flex;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 9999px;
   justify-self: center;
   margin-bottom: 56px;
+  
   /* gap: 56px; */
+  
+}
+
+.perfil2 {
+  display: flex;
+  
+  object-fit: cover;
+  border-radius: 9999px;
+  justify-self: center;
+  
   
 }
 
@@ -23,6 +36,12 @@ header {
   height: 96px;
   padding: 4.36px;
   
+}
+
+.code {
+  position: absolute;
+  display: flex;
+
 }
 
 #title {
@@ -51,10 +70,63 @@ figure {
   border-radius: 999px;
   background-color: var(--gray-400);
   width: 114px;
+  height: 40px;
+  color: var(--gray-200);
+}
+
+figure.htmll {
+  border: solid var(--gray-400);
+  border-radius: 999px;
+  background-color: var(--gray-400);
+  width: 105px;
+  height: 40px;
+  fill: var(--red);
+}
+
+figure.csss {
+  border: solid var(--gray-400);
+  border-radius: 999px;
+  background-color: var(--gray-400);
+  width: 92px;
+  height: 40px;
+}
+
+figure.javaa {
+  border: solid var(--gray-400);
+  border-radius: 999px;
+  background-color: var(--gray-400);
+  width: 138px;
+  height: 40px;
+}
+
+figure.reactt {
+  border: solid var(--gray-400);
+  border-radius: 999px;
+  background-color: var(--gray-400);
+  width: 106px;
+  height: 40px;
+}
+
+figure.jss {
+  border: solid var(--gray-400);
+  border-radius: 999px;
+  background-color: var(--gray-400);
+  width: 119px;
+  height: 40px;
 }
 
 figure img {
   display: grid;
   justify-self: center;
+  width: 24px;
+  height: 24px;
+  gap: 16px;
 }
 
+.lg {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  /* gap: 8px; */
+  
+}
