--- a/style/utility.css
+++ b/style/utility.css
@@ -18,6 +18,14 @@
   padding-bottom: 48px;
 }
 
+.pdb-20 {
+  padding-bottom: 20px;
+}
+
+.pdl-20 {
+  padding-left: 20px;
+}
+
 .gap-16 {
   gap: 16px;
 }
@@ -32,3 +40,6 @@
   grid-auto-flow: column;
 }
 
+.gap-20 {
+  gap: 20px;
+}
