--- a/style/index.css
+++ b/style/index.css
@@ -23,6 +23,8 @@
     grid-template-columns: 1fr;
     /* margin: auto; */
     padding: 24px 46px;
+    justify-items: center;
+
   }
 
   p {
@@ -109,9 +111,14 @@
     padding: 0;
     grid-template-columns: 1fr;
     grid-auto-flow: row;
-    /* margin: auto; */
-    padding: 24px 46px;
-    align-items: center;
+    margin: auto;
+    /* padding-inline: auto; */
+    /* align-items: center; */
+    justify-items: center;
+  }
+
+  .cont {
+    max-width: 300px;
   }
 
 
@@ -122,6 +129,10 @@
 
   #title h1 {
     font-size: 1.5rem;
+  }
+
+  h2 {
+    text-align: center;
   }
 
   #title h3 {
@@ -136,6 +147,7 @@
   .logos {
     grid-template-columns: 1fr;
     gap: 8px;
+    justify-items: center;
   }
 
   #services {
